XP-4482 Content Wizard toolbar - Fix menu overflow and alignment of the help-text icon
Fixed the `WizardStepNavigatorAndToolbar` dropdown styles.

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
@@ -60,9 +60,10 @@
 
     .@{_COMMON_PREFIX}dropdown {
       margin-top: 32px;
-      width: 180px;
+      max-width: 180px;
 
       .wizard-step-navigator {
+        width: initial;
         margin-bottom: 0;
         padding-right: 0;
         background-color: @admin-white;
