--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator.less
@@ -1,5 +1,5 @@
 .wizard-step-navigator {
-  width: calc(~'100% - 70px');
+  width: calc(~'100% - 72px');
   max-width: 635px;
   display: inline-block;
   background-color: @admin-bg-light-gray;
